# BI_Developer_MCP

./: CLAUDE.md  README.md  datapocket_mcp.py  demo_veterinarias.html  index.html  pyproject.toml  requirements.txt
examples/: ejemplo.json  ejemplo.jsonl  ejemplo.tsv  finanzas_ejemplo.csv  ventas_ejemplo.csv
src/: datapocket_mcp.py
tests/: test_datapocket.py
viz-tools/looker/: README.md
viz-tools/looker/examples/: ventas_output.md
viz-tools/power-bi/: README.md
viz-tools/power-bi/examples/: ventas_output.md
viz-tools/quicksight/: README.md
viz-tools/quicksight/examples/: ventas_output.md
viz-tools/tableau/: README.md
viz-tools/tableau/examples/: nz_bdc_financial.tds  nz_business_financial_dec2025.md  ventas_output.md
