[project]
name = "datapocket-mcp"
version = "3.0.0"
description = "Universal BI agent — turn raw data into reports for Power BI, Tableau, Looker, QuickSight via MCP"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rodrigo Infante", email = "rodrigo@dailyduty.co"}]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "chardet>=5.0.0",
]

[project.scripts]
datapocket = "src.datapocket_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
